<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CorgFuApp</string>
    <string name="action_settings">Settings</string>
    <string name="Wondering">I was wondering</string>
    <string name="QuestionHint">Enter your question here.</string>
    <string name="hello_world">Enter your question here.</string>
    <string name="title_activity_browse_items">BrowseItems</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_view_question_and_answers">ViewQuestionAndAnswers</string>
    <string name="title_activity_attach_picture">AttachPicture</string>
    <string name="attach_picture_string">attach Picture</string>
    <string name="search">Search:</string>
    <string name="sort">Sort By:</string>
    <string name="keyword">Keyword</string>
    <string name="UIDHint">Enter username</string>
    <string name="Login">Login</string>
    <string name="initPrompt">Enter a username to begin \n asking questions.</string>
    <string name="GoToAsk">ASK\n QUESTION</string>
    <string name="SearchButton">Search</string>
    <string name="create_location">Please enter the location \n you would like to use.</string>
    <string name="locationHint"> Enter your location here.</string>
    <string name="Enter">Enter</string>

    <string-array name="sortOptions">
        <item>Date Posted</item>
        <item>Questions With Pictures</item>
        <item>Most Upvotes</item>
        <item>Same Location</item>
    </string-array>

    <string name="attachLocation">Would you like to attach your \n location to questions you post?</string>
    <string name="attach_location_text"> Please attach my location to questions.</string>
    <string name="do_not_attach_location"> Do not attach my location to questions.</string>
    <string name="AskQuestion">Ask</string>
    <string name="MyProfile">MY \n PROFILE</string>
    <string name="GoToQuestion">QUESTIONS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="GoToAnswer">BROWSE \n QUESTIONS</string>
    <string name="add_picture_option">Do you want to add a picture?</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="questionHeaderText">QUESTION</string>
    <string name="favoriteButtonText">Favorite</string>
    <string name="upvoteButtonText">Upvote</string>
    <string name="topRepliesLabelText">Most Recent Replies</string>
    <string name="topAnswerLabelText">Top Answers</string>
    <string name="AnswerButtonText">Answer</string>
    <string name="writeReplyHint">Type Reply here ...</string>
    <string name="writeAnswerHint">Type Answer here ...</string>
    <string name="replyButtonText">Reply</string>
    <string name="answerButtonText">Answer</string>
    <string name="ReplyButtonText">Reply</string>
    <string name="readLaterButtonText">Read Later</string>
    <string name="idExtraTag">QuestionIdExtraTag</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="GoToFav">My Favourites</string>
    <string name="ReadLater">My Read Later</string>
    <string name="Cached">My Cached</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_favourite">Favourite</string>
    <string name="fav_button_description">Favorites Button Description</string>
    <string name="title_activity_add_picture">Adding a picture</string>
    <string name="pictureDescriptionQuestion">Question Picture</string>
    <string name="addSmallerPicture">Do you want to add smaller picture?</string>
    <string name="idSearchTerm">SearchTermIdExtraTag</string>
    <string name="idField">FieldIdExtraTag</string>
    <string name="MyQuestions">My Questions</string>
    <string name="title_activity_offline_data_view">OfflineDataView</string>
    <string name="emptyList">No Results found. Make sure you are connected to the Internet and try again.</string>
    <string name="Questions">Questions</string>
    <string name="title_activity_create_location">CreateLocationActivity</string>
    <string name="title_activity_view_answer_and_replies">ViewAnswerAndReplies</string>
    <string name="AddLocation">Add Location</string>

</resources>
