<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <EditText
        android:id="@+id/EnterQuestionBox"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/QuestionHint"
        />

    <TextView
        android:id="@+id/MainQuestionText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:layout_alignBaseline="@id/EnterQuestionBox"
        android:text="@string/Wondering" 
        android:textSize="20sp"
        android:textColor="#04C1D2"
        />
    <Button 
        android:id = "@+id/AskQuestionButton"
        android:layout_below="@id/MainQuestionText"
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#04C1D2"
        android:text="@string/AskQuestion"/>
    <Button 
        android:id = "@+id/MyProfileButton"
		android:text="@string/MyProfile"
		android:textColor="#04C1D2"
		android:textSize="30sp"
		android:layout_width="270dp"
		android:layout_height="60dp"
		android:background="@drawable/buttonshape"
        android:layout_alignBottom="@id/MainQuestionText"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
