<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".ViewQuestionAndReplies" >

    <Button
        android:id="@+id/readLaterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/ReplyEditText"
        android:background="@drawable/buttonshape"
        android:fontFamily="fonts/26783.ttf"
        android:onClick="readLater"
        android:text="@string/readLaterButtonText"
        android:textColor="#ff04c1d2" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/readLaterButton"
        android:fontFamily="fonts/26783.ttf"
        android:textColor="#ff04c1d2"
        android:textSize="15sp" >
    </TextView>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/questionText"
        android:text="Testing Name" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/questionText"
        android:text="Testing Name"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date"
        android:contentDescription="@string/fav_button_description"
        android:onClick="addToFavorite"
        android:src="@android:drawable/btn_star_big_off"
        android:text="@string/favoriteButtonText"
        android:textSize="15sp" />

    <Button
        android:id="@+id/upvoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:layout_toEndOf="@+id/favoriteButton"
        android:onClick="upvote"
        android:text="@string/upvoteButtonText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/upvoteCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/author"
        android:textColor="#ff04c1d2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/topHeaderLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/favoriteButton"
        android:text="@string/topRepliesLabelText"
        android:textStyle="bold" />

    <Button
        android:id="@+id/gotoAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/topHeaderLabelText"
        android:layout_toEndOf="@+id/upvoteButton"
        android:layout_toRightOf="@+id/upvoteButton"
        android:onClick="gotoAnswer"
        android:text="@string/AnswerButtonText"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/ReplyEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/submitReplyButton"
        android:layout_toStartOf="@+id/submitReplyButton"
        android:ems="10"
        android:hint="@string/writeReplyHint" />

    <Button
        android:id="@+id/submitReplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ReplyEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@+id/topHeaderLabelText"
        android:background="@drawable/buttonshape"
        android:fontFamily="fonts/26783.ttf"
        android:onClick="submitReply"
        android:text="@string/replyButtonText"
        android:textColor="#ff04c1d2" />

    <ListView
        android:id="@+id/replyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ReplyEditText"
        android:layout_alignLeft="@+id/ReplyEditText"
        android:layout_below="@+id/topHeaderLabelText" >
    </ListView>

    <ImageView
        android:id="@+id/qPictureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionText"
        android:layout_alignTop="@+id/readLaterButton"
        android:contentDescription="@string/pictureDescriptionQuestion" />

</RelativeLayout>