<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".ViewQuestionAndAnswers" >

    <Button
        android:id="@+id/readLaterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonshape"
        android:fontFamily="fonts/26783.ttf"
        android:onClick="readLater"
        android:text="@string/readLaterButtonText"
        android:textColor="#ff04c1d2" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/readLaterButton"
        android:fontFamily="fonts/26783.ttf"
        android:textColor="#ff04c1d2"
        android:textSize="15sp" >
    </TextView>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/questionText"
        android:textSize="12sp" >
    </TextView>

    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/location"
        android:contentDescription="@string/fav_button_description"
        android:onClick="addToFavorite"
        android:src="@android:drawable/btn_star_big_off"
        android:text="@string/favoriteButtonText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/upvoteCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/questionText"
        android:textColor="#ff04c1d2"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/qPictureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionText"
        android:layout_alignTop="@+id/readLaterButton"
        android:contentDescription="@string/pictureDescriptionQuestion" />

    <ExpandableListView
        android:id="@+id/answersListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionRepliesExpandable"
		android:layout_above="@+id/submitAnswerButton"
         >

    </ExpandableListView>

    <Button
        android:id="@+id/submitAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonshape"
        android:fontFamily="fonts/26783.ttf"
        android:onClick="submitAnswer"
        android:text="@string/answerButtonText"
        android:textColor="#ff04c1d2" />

    <EditText
        android:id="@+id/answerQuestionEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/submitAnswerButton"
        android:ems="10"
        android:hint="@string/writeAnswerHint" />

    <ExpandableListView
        android:id="@+id/questionRepliesExpandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerQuestionEditText"
        android:layout_below="@+id/favoriteButton"
         >

    </ExpandableListView>

    <Button
        android:id="@+id/upvoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_toEndOf="@+id/favoriteButton"
        android:layout_toRightOf="@+id/favoriteButton"
        android:onClick="upvote"
        android:text="@string/upvoteButtonText"
        android:textSize="15sp" />

</RelativeLayout>