<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.corgfuapp.Favourite" >

     <Button 
        android:id = "@+id/GoToAsk"
		android:text="@string/GoToAsk"
		android:textColor="#04C1D2"
		android:textSize="20sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/buttonshape"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20sp"
        android:padding="12sp"
        android:fontFamily="fonts/26783.ttf"
        android:onClick="toAskQuestion"
      />
     <Button 
        android:id = "@+id/MyProfileButton"
		android:text="@string/MyProfile"
		android:textColor="#04C1D2"
		android:textSize="20sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/buttonshape"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="12sp"
        android:fontFamily="fonts/26783.ttf"
      />
    <EditText
        android:id="@+id/searchEditText"
        android:hint = "@string/keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/GoToAsk"
        android:ems="10" >
		
    </EditText>

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/searchEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/searchEditText"
        android:layout_toLeftOf="@+id/searchEditText"
        android:layout_toStartOf="@+id/searchEditText"
        android:gravity = "center_vertical"
        android:text="@string/search"
        android:fontFamily="fonts/26783.ttf"
    	android:textColor="#ff04c1d2" 
        android:textSize="20dp"/>

    <Spinner
        android:id="@+id/sortSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/searchEditText"
        android:layout_alignStart="@+id/searchEditText"
        android:layout_below="@+id/searchEditText" />

    <TextView
        android:id="@+id/sortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sortSpinner"
        android:layout_alignLeft="@+id/searchLabel"
        android:layout_alignStart="@+id/searchLabel"
        android:layout_alignRight="@+id/searchLabel"
        android:layout_alignEnd="@+id/searchLabel"
        android:layout_alignTop="@+id/sortSpinner"
        android:gravity = "center_vertical"
        android:text="@string/sort"
        android:fontFamily="fonts/26783.ttf"
    	android:textColor="#ff04c1d2" 
        android:textSize="20dp"/>

    <ListView
        android:id="@+id/browseQuestionsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sortLabel"
        android:layout_alignStart="@+id/sortLabel"
        android:layout_below="@+id/sortSpinner"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

    </ListView>
    
</RelativeLayout>
