<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.corgFuViews.BrowseItems" >

    <EditText
        android:id="@+id/searchEditText"
        android:hint = "@string/keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:ems="10" >
		
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/searchEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/searchEditText"
        android:layout_toLeftOf="@+id/searchEditText"
        android:layout_toStartOf="@+id/searchEditText"
        android:gravity = "center_vertical"
        android:text="@string/search" />

    <Spinner
        android:id="@+id/sortSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/searchEditText"
        android:layout_alignStart="@+id/searchEditText"
        android:layout_below="@+id/searchEditText" />

    <TextView
        android:id="@+id/sortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sortSpinner"
        android:layout_alignLeft="@+id/searchLabel"
        android:layout_alignStart="@+id/searchLabel"
        android:layout_alignRight="@+id/searchLabel"
        android:layout_alignEnd="@+id/searchLabel"
        android:layout_alignTop="@+id/sortSpinner"
        android:gravity = "center_vertical"
        android:text="@string/sort" />

    <ListView
        android:id="@+id/browseQuestionsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sortLabel"
        android:layout_alignStart="@+id/sortLabel"
        android:layout_below="@+id/sortSpinner" >
    </ListView>
    
</RelativeLayout>
